# fprime-gds

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
.github/actions/spelling/: excludes.txt  expect.txt  patterns.txt
.github/resources/: RefTopologyAppDictionary.xml
.github/workflows/: fprime-gds-tests.yml  gds-cli-tests.yml  publish.yml  spelling.yml
docs/: conf.py
src/: fastentrypoints.py
src/fprime_gds/: version.py
src/fprime_gds/common/: transport.py  zmq_transport.py
src/fprime_gds/common/communication/: checksum.py  framing.py  ground.py  updown.py
src/fprime_gds/common/data_types/: ch_data.py  cmd_data.py  event_data.py  exceptions.py  pkt_data.py  sys_data.py
src/fprime_gds/common/decoders/: ch_decoder.py  decoder.py  event_decoder.py  file_decoder.py  pkt_decoder.py
src/fprime_gds/common/distributor/: distributor.py
src/fprime_gds/common/encoders/: ch_encoder.py  cmd_encoder.py  event_encoder.py  file_encoder.py  pkt_encoder.py  seq_writer.py
src/fprime_gds/common/files/: downlinker.py  helpers.py  uplinker.py
src/fprime_gds/common/gds_cli/: base_commands.py  command_send.py  filtering_utils.py  misc_utils.py  test_api_utils.py
src/fprime_gds/common/history/: chrono.py  ram.py  test.py
src/fprime_gds/common/loaders/: ch_json_loader.py  ch_py_loader.py  ch_xml_loader.py  cmd_json_loader.py  cmd_py_loader.py  cmd_xml_loader.py  dict_loader.py  event_json_loader.py  event_py_loader.py  event_xml_loader.py  json_loader.py  pkt_xml_loader.py  prm_json_loader.py  python_loader.py  xml_loader.py
src/fprime_gds/common/logger/: __init__.py  data_logger.py  test_logger.py
src/fprime_gds/common/parsers/: seq_file_parser.py
src/fprime_gds/common/pipeline/: dictionaries.py  encoding.py  files.py  histories.py  standard.py
src/fprime_gds/common/sequence/: README.md  builtin_ac.py  compiler.py  dictionary_ac.py  directive.py  fpy_type.py  header_generator.py  test_seq.py
src/fprime_gds/common/templates/: ch_template.py  cmd_template.py  data_template.py  event_template.py  prm_template.py
src/fprime_gds/common/testing_fw/: api.py  predicates.py  pytest_integration.py
src/fprime_gds/common/tools/: params.py  seqgen.py
src/fprime_gds/common/utils/: config_manager.py  jsonable.py  string_util.py
src/fprime_gds/executables/: apps.py  cli.py  comm.py  data_product_writer.py  fprime_cli.py  plotData.py  replay.py  run_deployment.py  tcpserver.py  utils.py
src/fprime_gds/flask/: app.py  channels.py  commands.py  components.py  default_settings.py  errors.py  events.py  flask_uploads.py  json.py  logs.py  resource.py  sequence.py  stats.py  updown.py
src/fprime_gds/flask/static/: index.html
src/fprime_gds/plugin/: definitions.py  system.py
src/fprime_gds/plugins/framing/: apid.py  ccsds.py  chain.py
test/fprime_gds/: test_plugins.py
test/fprime_gds/common/data_types/: test_cmd_data.py
test/fprime_gds/common/distributor/: test_distributor.py
test/fprime_gds/executables/: dictionary.json  test_data_product_writer.py  test_run_deployment.py  test_utils.py
test/fprime_gds/sample/: dictionary.xml
test/gui/: GUI_Test_Procedure.md
(+82 files in other folders)
